--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<HTML>
-	<HEAD>
-		<TITLE>Hello, Blog</TITLE>
-	</HEAD>
-	<BODY>
-		<div>Hello, world</div>
-	</BODY>
-</HTML>
+---
+# You don't need to edit this file, it's empty on purpose.
+# Edit whiteglass' home layout instead if you want to make some changes.
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
+---
